data/derived/comb/progs/unify/prog2812.ml.out
Characters 187-202:
  (t,updateTotal) in
  ^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int list
